FIX: Scale full size image to screen size on smaller screens [t14767]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10493 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -653,6 +653,9 @@
     .TopInpageNavRight {
         margin-top:1px;
     }
+    #PreviewImageLarge {
+        width: 95vw;
+    }
 }
 @media(max-width:700px) {
     .ResourcePanelShell .ResourcePanel {
